fix workflows to use secrets: inherit

--- a/.github/workflows/build-with-ndk.yml
+++ b/.github/workflows/build-with-ndk.yml
@@ -21,6 +21,7 @@ jobs:
   sync-for-upstream:
     needs: build-with-ndk
     uses: turistu/odds-n-ends/.github/workflows/sync.yml@main
+    secrets: inherit
     with:
       branch: for-upstream
       upstream: https://github.com/strace/strace
