don't bother with make check

--- a/.github/workflows/build-with-ndk.yml
+++ b/.github/workflows/build-with-ndk.yml
@@ -28,7 +28,7 @@ jobs:
       - run: sudo apt-get install gcc-multilib
       - run: ./configure
       - run: make
-      - run: make check
+      # - run: make check
   sync-for-upstream:
     needs: [build-with-ndk, build-native]
     uses: turistu/odds-n-ends/.github/workflows/sync.yml@main
